infra/k8s/random/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ew-random
  labels:
    name: ew-random
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ew-random
  template:
    metadata:
      labels:
        name: ew-random
    spec:
      imagePullSecrets:
        - name: ghcrcred
      serviceAccountName: ew-random
      securityContext:
        {}
      containers:
        - name: ew-random
          securityContext:
            privileged: true
          image: "ghcr.io/ktraister/ew_random:0f33dd439510f998381214f753ed8779a297e695"
          imagePullPolicy: Always
          resources:
            {}
