infra/k8s/random/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ew-random
  labels:
    app: ew-random
spec:
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
      name: http
  selector:
    name: ew-random
