infra/k8s/random/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "ew-random-ingress"
  namespace: "default"
spec:
  defaultBackend:
    service:
      name: "ew-random"
      port:
        number: 8090
status:
  loadBalancer: {}
